syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.womenpower.jobhub";

service JobHubService {
  rpc FindMentorship (MentorshipQuery) returns (stream Mentorship);
  rpc MatchJob (JobMatchRequest) returns (JobListing);
}

message MentorshipQuery {
  string user_id = 1;
  repeated string interests = 2;
}

message Mentorship {
  string mentor_name = 1;
  string expertise = 2;
  string contact_info = 3;
}

message JobMatchRequest {
  string user_id = 1;
  string location = 2;
  int32 min_salary = 3;
}

message JobListing {
  string job_title = 1;
  string company = 2;
  int32 salary_range = 3;
}